2005-08-13  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* botan/gzip.cpp, botan/mutex.cpp: c functions via c* headers need
	std:: prefix

2005-08-13  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* schema_migration.cc (lowercase): it's only used for processing sha1
	values whos size we know: make array size constant
	* transforms.cc (encode_hexenc, decode_hexenc): they have to work with
	all kinds of string sizes, so at least make them nicer by using
	boost::scoped_array

2005-08-13  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* revision.cc: make copy constructor of revision_set behave like
	normal constructor in case it's copying a freshly created object

2005-08-13  Nathaniel Smith  <njs@pobox.com>

	* testsuite.at: Use SEGV to kill netsync servers, in hopes it will
	give better coverage information.

2005-08-13  Julio M. Merino Vidal  <jmmv@menta.net>

	* configure.ac: Remove an obsolete check to see if SQLite was
	bundled or not, because the bundled version has been used
	exclusively for quite some time.

2005-08-13  Julio M. Merino Vidal  <jmmv@menta.net>

	* database_check.cc: Remove trailing newline from error messages
	when embedding them inside other strings, so that the trailing
	closing parenthesis is printed correctly.

2005-08-13  Julio M. Merino Vidal  <jmmv@menta.net>

	* configure.ac: Add '-mt' as another possible suffix to detect the
	Boost libraries.  It's very common when these libraries are built
	with the "native naming layout".

2005-08-13  Nathaniel Smith  <njs@pobox.com>

	* monotone.1, monotone.texi: Don't mention agraph.
	* tests/t_netsync_repeated.at: Don't use agraph.
	* tests/t_netsync_unrelated.at: Likewise.

2005-08-13  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (agraph): Remove.

2005-08-13  Nathaniel Smith  <njs@pobox.com>

	* tests/t_commit_log_writeback.at: New test.
	* testsuite.at: Add it.

2005-08-12  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (commit): When user uses --message or